--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -288,6 +288,7 @@
         <DCCReference Include="Src\BitmapTileSaveLoad\i_Bitmap8Static.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\i_BitmapTileSaveLoad.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\i_BitmapTileSaveLoadFactory.pas"/>
+        <DCCReference Include="Src\BitmapTileSaveLoad\i_FreeImageFormatIdProvider.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\u_Bitmap32To8ConverterByFreeImage.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\u_Bitmap32To8ConverterByLibImageQuant.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\u_Bitmap8Static.pas"/>
@@ -295,6 +296,7 @@
         <DCCReference Include="Src\BitmapTileSaveLoad\u_BitmapTileLibJpeg.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\u_BitmapTileLibPng.pas"/>
         <DCCReference Include="Src\BitmapTileSaveLoad\u_BitmapTileSaveLoadFactory.pas"/>
+        <DCCReference Include="Src\BitmapTileSaveLoad\u_FreeImageFormatIdProvider.pas"/>
         <DCCReference Include="Src\Browser\c_InternalBrowser.pas"/>
         <DCCReference Include="Src\Browser\frm_InternalBrowser.pas">
             <Form>frmInternalBrowser</Form>
