--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -1710,6 +1710,7 @@
         <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileConnection.pas"/>
         <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileConnectionBuilder.pas"/>
         <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileConnectionMBTiles.pas"/>
+        <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileConnectionOruxMaps.pas"/>
         <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileConnectionPool.pas"/>
         <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileConnectionRMaps.pas"/>
         <DCCReference Include="Src\TileStorage\SQLiteFile\u_TileStorageSQLiteFileInfo.pas"/>
