Добавил дефолтную иконку для случая, если вообще нет ни одной иконки в папке MarksIcons

--- a/Resources/Common/Common.rc
+++ b/Resources/Common/Common.rc
@@ -5,6 +5,7 @@ ICONIII RCDATA "ICONIII.png"
 MAINMAP RCDATA "MAINMAP.png"
 VRULLER RCDATA "VRULLER.png"
 VTUMBLER RCDATA "VTUMBLER.png"
+YLW_PUSHPIN RCDATA "YLW-PUSHPIN.png"
 RED RCDATA "RED.png"
 FOUNDPNT RCDATA "FOUNDPNT.png"
 ARROW RCDATA "ARROW.png"
