3925: Переключение на ресамплер от FreeImage при ресайзе иконок карт

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -1920,6 +1920,7 @@
         <DCCReference Include="Src\t_GeoTypes.pas"/>
         <DCCReference Include="Src\u_AnsiStr.pas"/>
         <DCCReference Include="Src\u_BitmapFunc.pas"/>
+        <DCCReference Include="Src\u_BitmapFuncFreeImage.pas"/>
         <DCCReference Include="Src\u_ByteSwapFunc.pas"/>
         <DCCReference Include="Src\u_Clipper.pas"/>
         <DCCReference Include="Src\u_FileSystemFunc.pas"/>
